Fix to broken facet css; temporary fix added to hide date range limit on tablet

--- a/app/assets/stylesheets/uoh-bl/_facets.css.scss
+++ b/app/assets/stylesheets/uoh-bl/_facets.css.scss
@@ -97,7 +97,8 @@
   padding-top: 0.5em !important;
 
   .current {
-      padding-bottom: 0.5em;
+    padding-bottom: 0.5em;
+  }
 }
 
 .twiddle > a {
